personal portfolio horizontal scroll fixed

--- a/Responsive Web Design Projects/Personal Portfolio/styles.css
+++ b/Responsive Web Design Projects/Personal Portfolio/styles.css
@@ -11,17 +11,12 @@ html {
     scroll-behavior: smooth;
 }
 
-
-/* .page-wrapper {
-    width: 100vw;
-} */
-
 #navbar {
     background: #f9fbfc;
     position: fixed;
     top: 0;
     z-index: 98;
-    transition: .3s linear;
+    transition: 0.3s linear;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.8);
     width: 100%;
     padding: 1rem;
@@ -126,7 +121,7 @@ html {
 
 #navbar .toggler:checked~.menu {
     visibility: visible;
-    transition: all .75s ease;
+    transition: all 0.75s ease;
 }
 
 #navbar .toggler:checked~.menu>div {
@@ -265,14 +260,14 @@ html {
 
 .welcome-section-links a {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 50px;
     height: 50px;
     cursor: pointer;
-    margin: 0.5rem 1.2rem;
+    margin: 1rem 1.2rem;
     border-radius: 50%;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 500;
     color: #333333;
 }
@@ -280,13 +275,13 @@ html {
 .welcome-section-links a:hover {
     background-color: #333333;
     color: #f9fbfc;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
     transition: all ease 0.5s;
 }
 
 .welcome-section-links a:hover:nth-child(2) {
     background-color: #0073b1;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 12px rgba(90, 64, 64, 0.6);
     transition: all ease 0.5s;
 }
 
@@ -310,7 +305,7 @@ html {
     font-weight: 500;
     padding: 1rem 3rem;
     border-radius: 6px;
-    transition: .2s linear;
+    transition: 0.2s linear;
     cursor: pointer;
     background-color: #333333;
 }
@@ -562,7 +557,7 @@ html {
     text-align: center;
     color: #f9fbfc;
     border-radius: 0.4rem;
-    transition: .2s linear;
+    transition: 0.2s linear;
     cursor: pointer;
     background: #333333;
 }
@@ -649,7 +644,7 @@ html {
 .profile-links a:hover,
 .a-links-bar a:hover {
     background-color: #000000;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
     transition: all ease 0.5s;
 }
 
@@ -662,22 +657,10 @@ html {
 
 /* For Desktop and possibly tablet view */
 
-.profile-links a:hover,
-.a-links-bar a:hover {
-    background: #333333;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.7);
-    transition: all ease 0.5s;
-}
-
 .profile-links a:hover:nth-child(2),
 .a-links-bar a:hover:nth-child(2) {
     background-color: #0073b1;
-}
-
-.profile-links a:hover i,
-.a-links-bar a:hover i {
-    color: #ffffff;
-    transition: all ease 0.5s;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
 }
 
 .footer-section {
@@ -687,7 +670,7 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
 .footer-section .copyright {
@@ -813,7 +796,7 @@ html {
         padding: 0 1.5rem 3rem;
     }
     #about-section .background-container h3 {
-        padding: 4rem 0 1.5rem;
+        padding: 6rem 0 1.5rem;
         font-size: 4.5rem;
     }
     #about-section .background-container h4 {
@@ -828,7 +811,7 @@ html {
         padding: 0 1rem 2rem;
     }
     #skills-section .skills-container h3 {
-        padding: 4rem 0 1.5rem;
+        padding: 6rem 0 1.5rem;
         font-size: 4.5rem;
     }
     #skills-section .skills-container p {
@@ -846,7 +829,7 @@ html {
         padding: 1.2rem 1.3rem;
     }
     .portfolio-intro h3 {
-        padding: 4rem 0 1rem;
+        padding: 6rem 0 1.5rem;
         font-size: 4.5rem;
     }
     .portfolio-intro p {
@@ -935,14 +918,14 @@ html {
     }
 }
 
-@media only screen and (min-width:1000px) {
+@media only screen and (min-width: 1000px) {
     #navbar {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
         transition: all 0.2s ease-in-out;
-        padding: 0.5rem 2.5rem;
+        padding: 0.5rem 0.5rem 0.5rem 2.5rem;
     }
     #navbar span {
         display: flex;
@@ -980,10 +963,9 @@ html {
     }
     #welcome-section h1 {
         letter-spacing: 3px;
-        font-size: 50px;
+        font-size: 3rem;
     }
     .welcome-section-links a {
-        margin: 3rem;
         width: 90px;
         height: 90px;
         font-size: 2.5rem;
